# So-Notes

./: CHANGELOG.md  LICENSE  README.md  RELEASE_GUIDE.md  RELEASE_TEMPLATE.md  ai-todo.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: 2  Board_path.json  Cargo.toml  SoNotes_Backup_2026-02-07.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BoardDock.tsx  Canvas.tsx  ContextMenu.tsx  MiniMap.tsx  NoteCard.tsx  PinFab.tsx  ShortcutsManager.tsx  Spotlight.tsx  Tooltip.tsx  TrashGrid.tsx
src/constants/: layout.ts
src/hooks/: useDarkMode.ts  useEdgePush.ts
src/store/: db.ts  types.ts  useStore.ts
src/utils/: dataTransfer.ts  fileSystem.ts
